--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="scene">
     <div class="card">
-    <div class="card_face card_face--front">
+    <div class="cara_frontal">
         <h2>Frente</h2>
     </div>
     <div class="card_face card_face--back">
