Cambio nombre cara trasera

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="cara_frontal">
         <h2>Frente</h2>
     </div>
-    <div class="card_face card_face--back">
+    <div class="cara_trasera">
         <h2>Reverso</h2>
      </div>
     </div>
