--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="scene">
     <div class="card">
-    <div class="cara_frontal">
+    <div class="card_face card_face--front">
         <h2>Frente</h2>
     </div>
-    <div class="cara_trasera">
+    <div class="card_face card_face--back">
         <h2>Reverso</h2>
      </div>
     </div>
